--- a/Todo/wwwroot/index.html
+++ b/Todo/wwwroot/index.html
@@ -16,7 +16,9 @@
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
-    </div>
+</div>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
