Adds spinner as a loader!

--- a/Todo/wwwroot/index.html
+++ b/Todo/wwwroot/index.html
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">
+    <div class="absolute right-1/2 bottom-1/2  transform translate-x-1/2 translate-y-1/2 ">
+        <div style="border-top-color:transparent" class="border-solid animate-spin  rounded-full border-blue-400 border-8 h-64 w-64"></div>
+    </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
