--- a/Todo/wwwroot/index.html
+++ b/Todo/wwwroot/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="app">
-    <div class="absolute right-1/2 bottom-1/2  transform translate-x-1/2 translate-y-1/2 ">
+    <div class="absolute inset-1/2  transform translate-x-1/2 translate-y-1/2 ">
         <div style="border-top-color:transparent" class="border-solid animate-spin  rounded-full border-blue-400 border-8 h-64 w-64"></div>
     </div>
     </div>
