--- a/Todo/wwwroot/index.html
+++ b/Todo/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Todo</title>
     <base href="/" />
+    <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 
@@ -22,8 +23,9 @@
         <a class="dismiss">🗙</a>
 </div>
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="_content/Blazored.Typeahead/blazored-typeahead.js"></script>
+<script src="_framework/blazor.webassembly.js"></script>
 
-    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
