--- a/Todo/wwwroot/index.html
+++ b/Todo/wwwroot/index.html
@@ -7,6 +7,8 @@
     <title>Todo</title>
     <base href="/" />
     <link href="_content/Blazored.Typeahead/blazored-typeahead.css" rel="stylesheet" />
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
+
     <link href="css/site.css" rel="stylesheet" />
 </head>
 
